# homomorphic_actors

./: Cargo.toml  README.md
architecture/: trust_outline.md
examples/: create_and_replace_keys.rs
src/: lib.rs  main.rs  trust.rs
src/trust/: trust_actor.rs  trust_message.rs
